<resources>
    <string name="app_name">Gymtrovert</string>
    <string name="welcome_text">Welcome! 💪🏋️️‍</string>
    <string name="welcome_intro">Are you fed up with spending countless minutes waiting for gym equipment to become available due an overcrowded gym?</string>
    <string name="get_started_text">Get Started 🤓️‍</string>
    <string name="username_text">Username:</string>
    <string name="email_text">Email Address:</string>
    <string name="password_text">Password:</string>
    <string name="i_already_have_an_account_text"><u>I already have an account</u></string>
    <string name="sign_me_up_text">Sign me up</string>
    <string name="enter_password_here_text">Enter password here</string>
    <string name="enter_email_here_text">Enter email here</string>
    <string name="enter_username_here_text">Enter username here</string>
    <string name="main_motivation">Let\'s Crush This Workout 💪🏋️️</string>
    <string name="how_many_people_text"><u>How many people are at the gym right now?</u></string>
    <string name="four_peeps">4 people</string>
    <string name="time">4h : 30m</string>
    <string name="weight_today"><u>Your weight today:</u></string>
    <string name="weight"><u>400</u> lbs</string>
    <string name="log_data_text">Log Data</string>
    <string name="down_arrow">Down arrow</string>
    <string name="up_arrow">Up Arrow</string>
    <string name="recently_tracked">Recently Tracked</string>
    <string name="min">min</string>
    <string name="h">h</string>
    <string name="welcome_back">Welcome Back! 💪</string>
    <string name="log_in">Log In</string>
    <string name="i_don_t_have_an_account"><u>I don\'t have an account</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logging_history">Logging History</string>
    <string name="data_graph">Data Graph</string>

</resources>