<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="348dp"
        android:layout_height="379dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@mipmap/gradient_circle_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome_text"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/get_started_text"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="325dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_light"
        android:lineSpacingExtra="3sp"
        android:text="@string/welcome_intro"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/username_text"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="255dp"
            android:layout_height="48dp"
            android:textCursorDrawable="@color/black"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:backgroundTint="#BFBFBF"
            android:hint="@string/enter_username_here_text"
            android:textSize="14sp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/email_text"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="255dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/enter_email_here_text"
            android:textSize="14sp"
            android:backgroundTint="#BFBFBF"
            android:ems="10"
            android:textCursorDrawable="@color/black"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/password_text"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="255dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_password_here_text"
            android:textSize="14sp"
            android:backgroundTint="#BFBFBF"
            android:fontFamily="@font/poppins_light"
            android:textCursorDrawable="@color/black"
            android:labelFor="@id/textView8"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/i_already_have_an_account_text"
            android:textColor="#000000" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:background="@drawable/rounded_button_border"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sign_me_up_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>