<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="348dp"
        android:layout_height="379dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="192dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/gradient_circle_foreground" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome_back"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.033">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:fontFamily="@font/poppins"
            android:text="@string/email_text"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/emailAddressInput"
            android:layout_width="255dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="#BFBFBF"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/enter_email_here_text"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:fontFamily="@font/poppins"
            android:text="@string/password_text"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="255dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:backgroundTint="#BFBFBF"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/enter_password_here_text"
            android:inputType="textPassword"
            android:labelFor="@id/textView8"
            android:textCursorDrawable="@color/black"
            android:textSize="13sp" />


        <Button
            android:id="@+id/doesnt_have_account"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:fontFamily="@font/poppins"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/i_don_t_have_an_account"
            android:textAllCaps="false"
            android:textColor="#404040"
            android:textSize="12sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:background="@drawable/rounded_button_border"
            android:backgroundTint="#000000"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <!--        <com.google.android.gms.common.SignInButton-->
        <!--            android:id="@+id/bt_sign_in"-->
        <!--            android:layout_width="150dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_centerInParent="true"-->
        <!--            android:layout_marginStart="-5dp"-->
        <!--            android:layout_marginTop="16dp"-->
        <!--            android:layout_marginEnd="16dp"-->
        <!--            android:layout_marginBottom="16dp" />-->
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>