<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="276dp"
            android:layout_height="80dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/main_motivation"
            android:textColor="#000000"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/how_many_people_text"
            android:textColor="#000000"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.368"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />



        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="388dp"
            android:layout_height="507dp"
            android:layout_marginStart="132dp"
            android:layout_marginTop="152dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/gradient_circle_foreground" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="140dp"
            android:layout_height="134dp"
            android:layout_marginLeft="-5sp"
            android:layout_marginTop="-5sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/gradient_circle_2_foreground" />

        <View
            android:id="@+id/view"
            android:layout_width="322dp"
            android:layout_height="126dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/rounded_edges"
            android:backgroundTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <View
            android:id="@+id/view2"
            android:layout_width="322dp"
            android:layout_height="126dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edges"
            android:backgroundTint="#552551"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <View
            android:id="@+id/view3"
            android:layout_width="322dp"
            android:layout_height="126dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edges"
            android:backgroundTint="#091710"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="322dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button_border"
            android:backgroundTint="#000000"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/log_data_text"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="4"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.446"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="400 lbs"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/view3"
            app:layout_constraintVertical_bias="0.771" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="people"
            android:textColor="#FFFFFF"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.527" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="79dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/up_arrow"
            android:src="@mipmap/arrow_2_foreground"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/textView12"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/appCompatImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/down_arrow"
            android:rotation="180"
            android:src="@mipmap/arrow_2_foreground"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="4"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:layout_constraintVertical_bias="0.544" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text=":"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:layout_constraintVertical_bias="0.529" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="30"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:layout_constraintVertical_bias="0.544" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/h"
            android:textColor="#FFFFFF"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:layout_constraintVertical_bias="0.561" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/min"
            android:textColor="#FFFFFF"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:layout_constraintVertical_bias="0.561" />
        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="vertical" />-->
        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/weight_today"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/textView17"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/view3"
            app:layout_constraintVertical_bias="0.741" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/recently_tracked"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.162"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>